<resources>
    <string name="app_name">Gadgeothek</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register_login">loginUser</string>
    <string name="title_activity_register_user">registerUser</string>
    <string name="register">Register</string>
    <string name="mail">e-Mail</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="Matrikelnumber">Matrikelnumber</string>
    <string name="title_activity_library_selection">Set Server Address</string>
    <string name="server_address">Server Address</string>
    <string-array name="default_servers_array">
        <item>mge1.dev.ifs.hsr.ch</item>
        <item>mge2.dev.ifs.hsr.ch</item>
        <item>mge3.dev.ifs.hsr.ch</item>
        <item>mge4.dev.ifs.hsr.ch</item>
        <item>mge5.dev.ifs.hsr.ch</item>
        <item>mge6.dev.ifs.hsr.ch</item>
        <item>mge7.dev.ifs.hsr.ch</item>
        <item>mge8.dev.ifs.hsr.ch</item>
        <item>mge9.dev.ifs.hsr.ch</item>
        <item>mge10.dev.ifs.hsr.ch</item>
        <item>localhost:8080</item>
        <item>10.0.2.2:8080</item>
        <item>192.168.178.22:8080</item>
    </string-array>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_item_set_server">Set Server</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="nav_item_register">Register</string>
    <string name="nav_item_login">Login</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_sub_menu_config">Config</string>
    <string name="nav_item_loan">Loan</string>
    <string name="nav_item_reservation">Reservation</string>
    <string name="title_activity_reservation">ReservationActivity</string>
    <string name="add_reservation">Add</string>
    <string name="delete_reservation">Delete</string>
    <string name="title_activity_add_reservation">AddReservationActivity</string>
    <string name="title_activity_loan_user">LoanUser</string>
    <string name="title_activity_gadget_detail">GadgetDetailActivity</string>
    <string name="logout">Logout</string>
    <string name="Logged_out">Logged out</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="gadgeothek">Gadgeothek</string>
</resources>
