<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_loan"
            android:title="@string/nav_item_loan" />
        <item
            android:id="@+id/navigation_item_reservation"
            android:title="@string/nav_item_reservation" />
    </group>

    <item android:title="@string/nav_sub_menu_config">
        <menu android:id="@+id/menu_config">
            <item
                android:id="@+id/navigation_item_register"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/nav_item_register"
                />
            <item
                android:id="@+id/navigation_item_login"
                android:icon="@drawable/ic_input_black_24dp"
                android:title="@string/nav_item_login"/>

            <item
                android:id="@+id/navigation_item_logout"
                android:icon="@drawable/ic_input_black_24dp"
                android:title="@string/nav_item_logout" />
            <item
                android:id="@+id/navigation_item_set_server"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_item_set_server" />
        </menu>
    </item>

</menu>